Fix overlap

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -313,179 +313,7 @@ h1, h2, h3, h4, h5, h6, figure {
 			margin-bottom: 20px;
 		}
 	}
-
 }
-
-
-
-// TIMELINE
-.timeline {
-    list-style: none;
-    padding: 20px 0 20px;
-    position: relative;
-    &:before {
-		top: 0;
-		bottom: 0;
-		position: absolute;
-		content: " ";
-		width: 1px;
-		background-color: #d4d4d4;
-		left: 50%;
-		margin-left: 0px;
-		@media screen and (max-width: $screen-xs) {
-			margin-left: -64px;
-		}
-	}
-	> li{
-		margin-bottom: 20px;
-		position: relative;
-		&:before, &:after{
-			content: " ";
-			display: table;
-		}
-		&:after{
-			clear: both;
-		}
-		> .timeline-panel {
-			width: 40%;
-			float: left;
-			border: 1px solid #d4d4d4;
-			padding: 30px;
-			position: relative;
-			@include border-radius(4px);
-			&:before {
-				position: absolute;
-				top: 80px;
-				right: -15px;
-				display: inline-block;
-				border-top: 15px solid transparent;
-				border-left: 15px solid #ccc;
-				border-right: 0 solid #ccc;
-				border-bottom: 15px solid transparent;
-				content: " ";
-			}
-			&:after {
-				position: absolute;
-				top: 81px;
-				right: -14px;
-				display: inline-block;
-				border-top: 14px solid transparent;
-				border-left: 14px solid #fff;
-				border-right: 0 solid #fff;
-				border-bottom: 14px solid transparent;
-				content: " ";
-			}
-			@media screen and (max-width: $screen-xs) {
-				width: 75% !important;
-				&:before{
-					top: 30px;
-				}
-				&:after{
-					top: 31px;
-				}
-			}
-		}
-		> .timeline-badge {
-			background-size: cover;
-			background-position: top center;
-			background-repeat: no-repeat;
-			position: relative;
-			color: #fff;
-			width: 160px;
-			height: 160px;
-			line-height: 50px;
-			font-size: 1.4em;
-			text-align: center;
-			position: absolute;
-			top: 16px;
-			left: 50%;
-			margin-left: -80px;
-			background-color: #999999;
-			z-index: 100;
-			@include border-radius(50%);
-			@media screen and (max-width: $screen-xs) {
-				width: 60px;
-				height: 60px;
-				margin-left: -20px !important;
-			}
-		}
-		&.timeline-inverted {
-			> .timeline-panel {
-				float: right;
-				&:before {
-					border-left-width: 0;
-					border-right-width: 15px;
-					left: -15px;
-					right: auto;
-				}
-				&:after {
-					border-left-width: 0;
-					border-right-width: 14px;
-					left: -14px;
-					right: auto;
-				}
-			}
-		}
-	}
-}
-
-.timeline-title {
-    margin-top: 0;
-}
-.date{
-	display: block;
-	margin-bottom: 20px;
-	font-size: 13px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-}
-
-.timeline-body > p,
-.timeline-body > ul {
-    margin-bottom: 0;
-}
-
-.timeline-body > p + p {
-  margin-top: 5px;
-}
-
-@media (max-width: $screen-md) {
-	ul.timeline:before {
-	  left: 90px;
-	}
-
-	ul.timeline > li > .timeline-panel {
-	  width: calc(100% - 200px);
-	  width: -moz-calc(100% - 200px);
-	  width: -webkit-calc(100% - 200px);
-	  // width: 40%;
-	}
-
-	ul.timeline > li > .timeline-badge {
-	  left: 15px;
-	  margin-left: 0;
-	  top: 16px;
-	}
-
-	ul.timeline > li > .timeline-panel {
-	  float: right;
-	}
-
-	ul.timeline > li > .timeline-panel:before {
-	   border-left-width: 0;
-	   border-right-width: 15px;
-	   left: -15px;
-	   right: auto;
-	}
-
-	ul.timeline > li > .timeline-panel:after {
-	   border-left-width: 0;
-	   border-right-width: 14px;
-	   left: -14px;
-	   right: auto;
-	}
-}
-
 
 // Map
 #map {
@@ -862,6 +690,19 @@ form {
 			margin-bottom: 0;
 		}
 	}
+
+}
+
+div {
+  &:after {
+    clear: both;
+  }
+}
+
+.container {
+  &:after {
+    clear: both;
+  }
 }
 
 #fh5co-footer {
